<!--
  ~ Copyright 2019 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Ltt.rs</string>

    <string name="archive">Archive</string>
    <string name="mark_unread">Mark unread</string>
    <string name="delete">Delete</string>
    <string name="mark_important">Mark important</string>
    <string name="search">Search</string>
    <string name="to_x">to %s</string>
    <string name="move_to_inbox">Move to inbox</string>
    <string name="remove_label_x">Remove label %s</string>
</resources>
